# mission-apollo-21

./: Components.md  README.md
docs/: components_list.md  project_plan.md
firmware/: Cargo.toml
firmware/stm32/: Cargo.toml
firmware/stm32/src/: main.rs
firmware/stm32f1-controller/: Cargo.toml  Embed.toml  STM32F103.svd  memory.x
firmware/stm32f1-controller/.cargo/: config.toml
firmware/stm32f1-controller/src/: app.rs  drivers.rs  helper.rs  main.rs
firmware/stm32f1-controller/src/drivers/: joystick.rs  nrf24l01.rs
firmware/stm32f1-controller/src/drivers/nrf24l01/: config.rs  enums.rs  registers.rs
firmware/stm32f4/: Cargo.toml
firmware/stm32f4-drone/: Cargo.toml
firmware/stm32f4-drone/.cargo/: config.toml
firmware/stm32f4-drone/src/: app.rs  blink_led.rs  drivers.rs  helper.rs  main.rs  pid.rs
firmware/stm32f4-drone/src/drivers/: bmi323.rs  motors.rs  nrf24l01.rs
firmware/stm32f4-drone/src/drivers/bmi323/: config.rs  constants.rs
firmware/stm32f4-drone/src/drivers/nrf24l01/: commands.rs  setup.rs
firmware/stm32f4-testing/: Cargo.toml
firmware/stm32f4-testing/.cargo/: config.toml
firmware/stm32f4-testing/src/: app.rs  helper.rs  imu_connection.rs  lib.rs  main.rs
firmware/stm32f4-testing/src/drivers/: bmi323.rs  imu.rs
firmware/stm32f4-testing/src/drivers/bmi323/: registers.rs
firmware/stm32f4-testing/src/drivers/imu/: bmi323.rs
firmware/stm32f4/src/: app.rs  drivers.rs
firmware/stm32f4/src/drivers/bmi323/: config.rs
mobile_app/: Android  Android.pub
mobile_app/app/: build.gradle
(+2 files in other folders)
