[package]
name = "stm32f4-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "1.0.0"

stm32f4xx-hal = { version = "0.23.0", features = ["stm32f411"] }
#bmi323="0.1.0"
#embedded-hal-compat = "0.13.0"


rtt-target = "0.6.2"

#once_cell = {version = "1.21.3",default-features = false}
